[package]
name = "api-version"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
url = "2.2"
once_cell = "1.18"
tower-http = { version = "0.5", features = ["cors"] } 
axum = "0.7"
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14", features = ["server"] }